platform/networking/gateway/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main
  namespace: traefik
spec:
  gatewayClassName: traefik-gateway-class
  listeners:                        
    - name: http                    
      protocol: HTTP
      port: 8000    
      allowedRoutes:
        kinds:
          - kind: HTTPRoute         
        namespaces:
          from: All
    - name: https           
      protocol: HTTPS       
      port: 8443
      hostname: "*.beeslab.me"     
      tls:
        mode: Terminate     
        certificateRefs:    
          - name: beeslab-me-wildcard-tls
      allowedRoutes:        
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
    - name: https-internal           
      protocol: HTTPS       
      port: 8443
      hostname: "*.internal.beeslab.me"     
      tls:
        mode: Terminate     
        certificateRefs:    
          - name: beeslab-me-wildcard-tls
      allowedRoutes:        
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
##    - name: tcp           
##      protocol: TCP       
##      port: 8000          
##      allowedRoutes:      
##        kinds:
##          - kind: TCPRoute  
##        namespaces:
##          from: All
##    - name: tls           
##      protocol: TLS       
##      port: 443           
##      hostname: "*.beeslab.me"   
##      tls:                
##        certificateRefs:  
##          - kind: "Secret"
##            name: "mysecret"  # to be added
##      allowedRoutes:      
##        kinds:
##          - kind: TLSRoute
##        namespaces:
##          from: All
